Change SikuliX to be based on KasmVNC.
This makes a much larger image but a lot easier to use for common
scenario. Instead of requiring to access/share the host X11(/Wayland)
it runs a virtual X11 session.

Comes with a browser and scrcpy to remote control Android phones
(Waydroid does not run inside containers currently; or at least
it's hard to get it to run so it's an advanced option people could
still use).

--- a/nightly/Dockerfile
+++ b/nightly/Dockerfile
@@ -11,31 +11,32 @@ RUN echo "Install requirements:" \
         xvfb \
         xauth \
  && apt-get clean \
+ && rm -rf /var/lib/apt/lists/* /tmp/*
 
- && echo "Workaround lsb_release showing errors when missing:" \
+RUN echo "Workaround lsb_release showing errors when missing:" \
  && printf "#/bin/sh\nuname -a\n" >/usr/bin/lsb_release \
- && chmod +x /usr/bin/lsb_release \
+ && chmod +x /usr/bin/lsb_release
 
- && echo "Download and install SikuliX:" \
- && DOWNLOAD_URL=$(curl -L https://launchpad.net/sikuli/sikulix/ | grep -Po '(?<=href=")https://launchpad.net/sikuli/sikulix/[^"]+download[^"]+') \
+# Note: Using latest **SikuliX with Jypthon** nightly build 1.1.1 because it's the first that can still run even when *wmctrl* isn't fully working, on Xvfb.
+RUN echo "Download and install SikuliX:" \
  && DOWNLOAD_URL=$(curl -L http://nightly.sikuli.de/ | grep -Po '(?<=href=")https://[^"]+/sikulixsetup-[^"]+\.jar') \
  && mkdir /sikulix \
  && curl -L $DOWNLOAD_URL -o /sikulix/sikulix-setup.jar \
  && xvfb-run java -jar /sikulix/sikulix-setup.jar options 1.1 \
-
- && echo "Make SikuliX binaries available for everyone:" \
- && chmod +x /sikulix/sikulix.jar /sikulix/runsikulix \
- && ln -s /sikulix/runsikulix /usr/local/bin/ \
- && ln -s /sikulix/sikulix.jar /usr/local/bin/ \
-
- && echo "Create default home directory:" \
- && mkdir /home/sikulix \
- && chmod ugo+rwx /home/sikulix \
-
+\
  && echo "Clean-up:" \
  && apt-get purge --auto-remove -y \
         xvfb \
  && rm -rf /var/lib/apt/lists/* /tmp/* /sikulix/sikulix-setup.jar /sikulix/*-SetupLog.txt /sikulix/SetupStuff
+
+RUN echo "Make SikuliX binaries available for everyone:" \
+ && chmod +x /sikulix/sikulix.jar /sikulix/runsikulix \
+ && ln -s /sikulix/runsikulix /usr/local/bin/ \
+ && ln -s /sikulix/sikulix.jar /usr/local/bin/
+
+RUN echo "Create default home directory:" \
+ && mkdir /home/sikulix \
+ && chmod ugo+rwx /home/sikulix
 
 VOLUME /home/sikulix
 
